# robotframework-openapi-libcore

./: .gitignore  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
docs/: README.md  advanced_use.md  openapi_libcore.html
src/OpenApiLibCore/: __init__.py  dto_base.py  dto_utils.py  oas_cache.py  openapi_libcore.libspec  openapi_libcore.py  value_utils.py
tests/: variables.py
tests/files/: schema_with_allof.yaml  schema_with_readOnly.json
tests/server/: testserver.py
tests/suites/: test_authorized_request.robot  test_default_id_property_name.robot  test_ensure_in_use.robot  test_extra_headers.robot  test_faker_locale.robot  test_get_ids_for_endpoint.robot  test_get_invalid_json_data.robot  test_get_invalidated_parameters.robot  test_get_invalidated_url.robot  test_get_json_data_for_dto_class.robot  test_get_json_data_with_conflict.robot  test_get_parameterized_endpoint_from_url.robot  test_get_request_data.robot  test_get_valid_id_for_endpoint.robot  test_get_valid_url.robot  test_readonly.robot  test_request_data_class.robot  test_schema_variations.robot  validate_keywords.robot
tests/unittests/: test_dto_utils.py  test_get_safe_key.py  test_value_utils.py
tests/unittests/value_utils/: test_get_invalid_value.py  test_get_valid_value.py  test_invalid_value_from_constraint.py  test_invalid_value_from_enum.py  test_localized_faker.py  test_random_array.py  test_random_float.py  test_random_integer.py  test_random_string.py  test_type_name_mappers.py  test_value_out_of_bounds.py
tests/user_implemented/: custom_user_mappings.py
