[tool.poetry]
name="robotframework-openapi-libcore"
version = "1.9.1"
description = "A Robot Framework library to facilitate library development for OpenAPI / Swagger APIs."
license = "Apache-2.0"
authors = ["Robin Mackaij <r.a.mackaij@gmail.com>"]
maintainers = ["Robin Mackaij <r.a.mackaij@gmail.com>"]
readme =  "./docs/README.md"
homepage = "https://github.com/MarketSquare/robotframework-openapi-libcore"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Framework :: Robot Framework",
]
packages = [
    { include = "OpenApiLibCore", from = "src" },
]
include = ["*.libspec"]

[tool.poetry.dependencies]
python = "^3.8"
robotframework = ">=4"
requests = "^2.27"
prance = {version = "^0.22", extras = ["CLI"]}
Faker = ">=11"
rstr = "^3"
openapi-core = "^0.17.0"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pylint = "*"
mypy = "*"
types-requests = "^2.25.6"
invoke = "*"
robotframework-stacktrace = "*"
uvicorn = "*"
fastapi = ">=0.88"
coverage = {version = "^5.5", extras = ["toml"]}
robotframework-tidy = "^3.3.3"
robotframework-robocop = "^2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = [
    "prance.*",
    "robot.*",
    "openapi_core.*",
    "invoke",
    "uvicorn",
    "rstr"
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
src_paths = [
    "src"
]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.'MESSAGES CONTROL']
disable = ["W1203"]

[tool.pylint.'FORMAT CHECKER']
max-line-length=120

[tool.pylint.'SIMILARITIES CHECKER']
ignore-imports="yes"
